# string-db

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
STRING_db/: __init__.py  network.py  prep.py  version.py
STRINGdb/: __init__.py  graph.py  graph_tool_back.py  network.py  prep.py  version.py
STRINGdb/dataset/: genes.csv
doc/: usage_demo.ipynb
