[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "STRING-db"
authors = [
    {name = "Rongbo Wu", email = "wurongbo2012@hotmail.com"},
]
description = "STRINGdb python REST api"
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
    "httpx >= 0.21",
    "pandas >= 1.4"
]

[project.optional-dependencies]
###

[tool.setuptools]
packages = ["STRING_db"]

[tool.setuptools.dynamic]
version = {attr = "STRING_db.__version__"}